[gd_scene format=3 uid="uid://db1hgsm4b4ykw"]

[ext_resource type="Script" uid="uid://5nkfnn7jmn7m" path="res://Scripts/main_menu.gd" id="1_853f1"]
[ext_resource type="Texture2D" uid="uid://bejhq1xwd8ldr" path="res://Assets/Backdrops/room1.png" id="1_tt5f1"]

[node name="MainMenu" type="Control" unique_id=501854647]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_853f1")

[node name="Play" type="Button" parent="." unique_id=1771572091]
layout_mode = 0
offset_left = 50.0
offset_top = 401.0
offset_right = 300.0
offset_bottom = 518.0
text = "Play"

[node name="Quit" type="Button" parent="." unique_id=954276911]
layout_mode = 0
offset_left = 47.0
offset_top = 758.0
offset_right = 297.0
offset_bottom = 875.0
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1706136826]
z_index = -1
texture_filter = 1
texture_repeat = 1
position = Vector2(963, 537.5)
scale = Vector2(9.989583, 9.898149)
texture = ExtResource("1_tt5f1")
metadata/_edit_lock_ = true

[node name="gameContainer" type="Node2D" parent="." unique_id=515340582]
z_index = 1

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
